test/type_inference/negative/type_args3.output
type_args3.impala:6 col 5 - 8: error: 'int32' (instance for 'A') does not implement bound 'T'
